# custom-ns-3

./: .dockerignore  .gitignore  Dockerfile  IEEE_802.11kv_Implementation.md  MODULE_REFERENCE.md  README.md  RUN_INSTRUCTIONS.md  bayesian-optimizer-consumer.py  bayesian_opt.py  bayesian_optimizer-consumer.py  config-simulation.json  docker-compose-kafka.yml  gat-streamer.py  kafka-rl-consumer.py  kafka_to_json.py  optuna_clean.py  read-spectrum-pipe.py  reference.cc  requirements.txt  run-dual-simulation.sh  run-kafka-pipeline.sh  send-force-dfs.py  spectrogram.py  test-force-dfs.sh  test-kafka-direct.py
BO_Package/: README.md  __init__.py  main.py  requirements.txt
BO_Package/config/: __init__.py  manager.py  models.py
BO_Package/core/: __init__.py  objective.py  optimizer.py
BO_Package/integrations/: __init__.py  api_client.py  kafka_client.py
BO_Package/metrics/: __init__.py  collector.py  models.py  processor.py
BO_Package/safety/: __init__.py  doubly_robust.py  propensity.py
BO_Package/utils/: __init__.py  logger.py  time_utils.py
LICENSES/: bayesian-optimizer-consumer.py
RL/: __init__.py  actor_sft_combined.pth  actor_sft_sisa.pth  actor_wifi.py  cnn_from_trace.py  cnn_kafka_consumer.py  config_tester.py  config_tester_2.py  gat_streamer.py  graph_builder.py  kafka-rl-consumer.py  main.py  main_with_critic.py  merged_final.json  requirements.txt  rl_logger.py  sft_actor.py  sft_actor_training.ipynb
RL/.ipynb_checkpoints/: main_with_critic-checkpoint.py
RL/online_weights/: wifi_actor.pth  wifi_actor_new.pth  wifi_critic.pth  wifi_critic_new.pth
contrib/auto-roaming-kv/: README.md
contrib/beacon-neighbor-protocol-11k/: CMakeLists.txt  README.md  beacon_report_received.json
contrib/bss_tm_11v/: CMakeLists.txt  (+1 more)
contrib/kafka-consumer/: CMakeLists.txt  README.md
contrib/kafka-consumer/examples/: CMakeLists.txt  kafka-consumer-example.cc
contrib/kafka-consumer/helper/: kafka-consumer-helper.cc  kafka-consumer-helper.h
contrib/kafka-consumer/model/: kafka-consumer.cc  kafka-consumer.h  optimization-command.cc  optimization-command.h
contrib/kafka-producer/: CMakeLists.txt  README.md  wscript
contrib/kafka-producer/examples/: CMakeLists.txt  kafka-producer-example.cc
contrib/kafka-producer/helper/: kafka-producer-helper.cc  kafka-producer-helper.h
contrib/kafka-producer/model/: kafka-producer.cc  kafka-producer.h
contrib/simulation-events/: CMakeLists.txt
contrib/simulation-events/helper/: simulation-event-helper.cc  simulation-event-helper.h
contrib/simulation-events/model/: simulation-event-producer.cc  simulation-event-producer.h  simulation-event.cc  simulation-event.h
dashboard/: .gitignore  ClientApp.tsx  README.md  constants.json  docker-compose-pre.yml  docker-compose-sim.yml  package-lock.json  package.json
kafka-logs/: optimization_commands_20251211_004518.json  rl_events_20251211_004518.json  simulator_events_20251211_004518.json
kafka_helper/: __init__.py  example.py  exceptions.py  test_channel_change.py
optuna_datagnen/: optuna_clean.py
rcpo/: __init__.py  rcpo_actor_wifi.py  rcpo_dynamic_graph_coloring.py  rcpo_gat_streamer.py  rcpo_main.py
spectrum_server/: config.py  server.py  spectrum_receiver.py  test_server.py
visualize-data/: README.md
(+431 files in other folders)
